--- a/hw3/index.html
+++ b/hw3/index.html
@@ -44,8 +44,7 @@
 <h2 align="middle">Raine Koizumi and Arjun Palkhade</h2>
 
 <!-- Add Website URL -->
-<h2 align="middle">Website URL: <a href="TODO">TODO</a></h2>
-
+<h2 align="middle"><a href="https://cal-cs184-student.github.io/hw-webpages-sp24-ArjunPalkhade/hw3/index.html">Page Link</a></h2>
 <br>
 
 
